<resources>
    <string name="app_name">ToDo</string>
    <string name="important">Important</string>
    <string name="add">Add</string>
    <string name="ex_get_milk">tap to add a ToDo!</string>
    <string name="complete">Delete</string>
    <string name="textview">TextView</string>
    <string name="delete">Delete</string>
    <string name="success">Success</string>
    <string name="delete_todo">Delete ToDo</string>
    <string name="no_todos_yet">No ToDo\'s...</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
